--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,8 +1,9 @@
-$main-color: #28c3d4;
-$secondary-color: #248ea9;
-$third-color: #aee7e8;
+$main-color: #6b119d;
+$secondary-color: #3a7ee9;
+$third-color: #360158;
 $text-color: #272B34;
-$background-color: #FCECC9;
+$background-color: white;
+$contrastive-letter-color: white;
 
 html{
     box-sizing: border-box;
@@ -20,26 +21,36 @@ a{
 }
 
 body{
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     .page-container{
         .dashboard{
             display: flex;
             justify-content: space-evenly;
             flex-wrap: wrap;
-            a{
+            div{
+                color: $contrastive-letter-color;
                 width: 20%;
-                box-shadow: 1px 1px 8px rgba(226, 226, 226, 1);
-                display: flex;
-                flex-direction: column;
-                .inner-box{
-                    height: 100px;
-                    background-color: $third-color;
-                    padding: 20px;
-                    h3{
-                        text-align: right;
-                    }
+                height: 50vh;
+                box-shadow: 1px 1px 8px grey;
+                background: linear-gradient(167deg, rgba(54,1,88,1) 0%, rgba(107,17,157,1) 52%, rgba(58,126,233,1) 100%);
+                border-radius: 20px;
+                position: relative;
+                h3{
+                    margin: 20px 20px;
                 }
                 p{
+                    margin: 20px 20px;
+                }
+                a{
+                    background-color: white;
+                    width: 60%;
+                    position: absolute;
+                    bottom: 0;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    border-radius: 20px;
+                    padding: 8px;
                     text-align: center;
                 }
             }
@@ -48,7 +59,7 @@ body{
 }
 
 header{
-    background-color: $secondary-color;
+    background-color: $third-color;
     a{
         color: $background-color;
     }
