--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,86 +1,98 @@
 html {
   box-sizing: border-box;
   background-color: white;
-  color: #272B34;
-}
+  color: #272B34; }
+
+ul {
+  list-style: none;
+  padding: 0px;
+  margin: 0px; }
 
 img {
-  width: 30px;
-}
+  width: 30px; }
 
 a {
   color: #3a7ee9;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .button {
   color: white;
   background-color: #3a7ee9;
-  padding: 20px;
-}
+  padding: 20px; }
+
+.page-header {
+  clear: both; }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-}
-body .page-container {
-  margin: 0 40px;
-}
-body .page-container .newSale {
-  position: sticky;
-  bottom: 10px;
-  z-index: 999;
-}
-body .page-container .newSale a {
-  float: right;
-  margin: 30px 0;
-}
-body .page-container .dashboard {
-  clear: both;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin: 100px 0;
-}
-body .page-container .dashboard div {
-  color: white;
-  width: 20%;
-  height: 50vh;
-  box-shadow: 1px 1px 8px grey;
-  background: linear-gradient(167deg, #360158 0%, #6b119d 52%, #3a7ee9 100%);
-  border-radius: 20px;
-  position: relative;
-}
-body .page-container .dashboard div h3 {
-  margin: 20px 20px;
-}
-body .page-container .dashboard div p {
-  margin: 20px 20px;
-}
-body .page-container .dashboard div a {
-  background-color: white;
-  width: 60%;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 20px;
-  padding: 8px;
-  text-align: center;
-}
+  margin: 0; }
+  body .page-container {
+    margin: 0 40px; }
+    body .page-container .newSale {
+      position: sticky;
+      bottom: 10px;
+      z-index: 999; }
+      body .page-container .newSale a {
+        float: right;
+        margin: 30px 0; }
+    body .page-container .dashboard {
+      clear: both;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin: 100px 0; }
+      body .page-container .dashboard div {
+        color: white;
+        width: 20%;
+        height: 50vh;
+        box-shadow: 1px 1px 8px grey;
+        background: linear-gradient(167deg, #360158 0%, #6b119d 52%, #3a7ee9 100%);
+        border-radius: 20px;
+        position: relative; }
+        body .page-container .dashboard div h3 {
+          margin: 20px 20px; }
+        body .page-container .dashboard div p {
+          margin: 20px 20px; }
+        body .page-container .dashboard div a {
+          background-color: white;
+          width: 60%;
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          border-radius: 20px;
+          padding: 8px;
+          text-align: center; }
+  body .report h2 {
+    text-align: center; }
+  body .report .firstReport {
+    display: flex;
+    justify-content: space-evenly; }
+  body .report .secondReport {
+    display: flex;
+    justify-content: space-evenly; }
 
 header .languages {
-  text-align: center;
-}
-header .languages a {
-  color: #3a7ee9;
-  margin: 0 10px;
-}
+  text-align: center; }
+  header .languages a {
+    color: #3a7ee9;
+    margin: 0 10px; }
 header .companyName h1 {
   background-color: #360158;
   margin: 0;
   padding: 20px 0;
-  color: white;
-}
+  color: white; }
+
+table {
+  border-collapse: collapse;
+  width: 100%; }
+  table th {
+    background-color: #6b119d;
+    color: white;
+    padding: 20px 0; }
+  table td {
+    border-bottom: 1px solid #3a7ee9;
+    padding: 10px 0;
+    text-align: center; }
 
 /*# sourceMappingURL=styles.css.map */
