--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,18 +23,26 @@ a {
 .page-header {
   clear: both; }
 
+h4 {
+  margin: 50px 0 20px; }
+
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0; }
+  margin: 0 0 50px; }
   body .page-container {
     margin: 0 40px; }
-    body .page-container .newSale {
-      position: sticky;
-      bottom: 10px;
-      z-index: 999; }
-      body .page-container .newSale a {
-        float: right;
-        margin: 30px 0; }
+    body .page-container .returnToHome {
+      display: block;
+      margin-top: 30px; }
+    body .page-container .newSale a {
+      float: right;
+      margin: 30px 0; }
+    body .page-container h2 {
+      text-align: center;
+      background-color: #360158;
+      color: white;
+      padding: 20px;
+      margin-bottom: 50px; }
     body .page-container .dashboard {
       clear: both;
       display: flex;
@@ -50,7 +58,8 @@ body {
         border-radius: 20px;
         position: relative; }
         body .page-container .dashboard div h3 {
-          margin: 20px 20px; }
+          margin: 50px 0px;
+          text-align: center; }
         body .page-container .dashboard div p {
           margin: 20px 20px; }
         body .page-container .dashboard div a {
@@ -64,13 +73,36 @@ body {
           padding: 8px;
           text-align: center; }
   body .report h2 {
-    text-align: center; }
+    text-align: center;
+    background-color: #3a7ee9;
+    color: white;
+    padding: 20px; }
   body .report .firstReport {
     display: flex;
-    justify-content: space-evenly; }
+    justify-content: space-evenly;
+    flex-direction: column; }
+    body .report .firstReport div {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
   body .report .secondReport {
     display: flex;
-    justify-content: space-evenly; }
+    justify-content: space-evenly;
+    flex-direction: column; }
+    body .report .secondReport div {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+  body .report p {
+    color: #6b119d;
+    font-weight: bold;
+    margin: 0px; }
+  body .report .reportBox {
+    background-color: rgba(58, 126, 233, 0.2);
+    padding: 20px;
+    margin: 20px 0; }
+    body .report .reportBox h3 {
+      margin: 0 0 10px; }
 
 header .languages {
   text-align: center; }
@@ -91,8 +123,12 @@ table {
     color: white;
     padding: 20px 0; }
   table td {
-    border-bottom: 1px solid #3a7ee9;
     padding: 10px 0;
     text-align: center; }
+  table tr:nth-child(odd) {
+    background-color: rgba(58, 126, 233, 0.2); }
+
+table.indexTable {
+  max-width: 300px; }
 
 /*# sourceMappingURL=styles.css.map */
