--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -52,7 +52,7 @@ body{
             margin-top: 30px;
         }
         .newSale{
-            a{
+            a.newSaleButton{
                 float: right;
                 margin: 30px 0;
             }
@@ -183,4 +183,12 @@ table{
 table.indexTable{
     max-width: 300px;
     
+}
+
+.newSaleModal{
+    margin: 0 auto;
+    max-width: 250px;
+    clear: both;
+    display: flex;
+    flex-direction: column;
 }
