--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -185,10 +185,65 @@ table.indexTable{
     
 }
 
+@mixin NewSaleBtn{
+    background-color: $secondary-color;
+    color: $contrastive-letter-color;
+    padding: 10px;
+    margin: 20px 0;
+    text-align: center;
+}
+
 .newSaleModal{
     margin: 0 auto;
-    max-width: 250px;
+    max-width: 300px;
     clear: both;
     display: flex;
     flex-direction: column;
+    border: 1px solid $main-color;
+    padding: 20px;
+    background-color: $main-color-transparent;
+    select{
+        margin-top: 10px;
+    }
+    a{
+        display: block;
+    }
+    select{
+        width: 100%;
+        font-size: 16px;
+        padding: 10px;
+        border: 1px solid $main-color;
+    }
+    .deleteBtn{
+        width: 15px;
+    }
+    a.confirmBtn{
+        @include NewSaleBtn();
+    }
+    a.cancelSale{
+        text-align: right;
+        font-size: 13px;
+        margin-bottom: 20px;
+        background-color: $main-color;
+        color: $contrastive-letter-color;
+        padding: 10px;
+        float: right;
+    }
+    a.addBtn{
+        text-align: center;
+        margin: 20px;
+    }
+    ul.showNewComponent li, .newSaleContainer p, .messageConfirmNewSale p{
+        background-color: $contrastive-letter-color;
+        padding: 10px;
+        margin: 0;
+    }
+}
+
+.hide{
+    display: none;
+}
+
+.show{
+    display: block;
 }
