--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -34,6 +34,13 @@ a{
     color: $contrastive-letter-color;
     background-color: $secondary-color;
     padding: 20px;
+    border: 1px solid white;
+    transition: all 0.5s;
+    &:hover{
+        background-color: $secondary-color-transparent;
+        color: $third-color;
+        border: 1px solid $third-color;
+    }
 }
 
 .page-header{
@@ -101,7 +108,7 @@ body{
                     font-size: 50px;
                     color: $secondary-color;
                 }
-                a{
+                a.seeMore{
                     background-color: white;
                     width: 60%;
                     position: absolute;
@@ -110,6 +117,11 @@ body{
                     transform: translate(-50%, -50%);
                     border-radius: 20px;
                     padding: 8px;
+                    transition: all 0.5s;
+                    &:hover{
+                        background-color: $third-color;
+                        color: $contrastive-letter-color;
+                    }
                 }
             }
         }
