--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,12 +180,15 @@ table.indexTable {
     text-align: center; }
   .newSaleModal a.cancelSale {
     text-align: right;
-    font-size: 13px;
+    font-size: 20px;
     margin-bottom: 20px;
-    background-color: #6b119d;
-    color: white;
-    padding: 10px;
+    color: #6b119d;
+    padding: 8px 10px;
     float: right; }
+    .newSaleModal a.cancelSale:hover {
+      background-color: #6b119d;
+      color: white;
+      transition: all 0.5s; }
   .newSaleModal a.addBtn {
     text-align: center;
     margin: 20px; }
