--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,156 +1,202 @@
 html {
   box-sizing: border-box;
   background-color: white;
-  color: #272B34; }
+  color: #272B34;
+}
 
 ul {
   list-style: none;
   padding: 0px;
-  margin: 0px; }
+  margin: 0px;
+}
 
 img {
-  width: 30px; }
+  width: 30px;
+}
 
 a {
   color: #3a7ee9;
-  text-decoration: none; }
+  text-decoration: none;
+}
+a:hover {
+  color: #360158;
+}
 
 .button {
   color: white;
   background-color: #3a7ee9;
   padding: 20px;
-  border: 1px solid white; }
-  .button:hover {
-    background-color: rgba(58, 126, 233, 0.2);
-    color: #360158;
-    border: 1px solid #360158;
-    transition: all 0.5s; }
+  border: 1px solid white;
+}
+.button:hover {
+  background-color: rgba(58, 126, 233, 0.2);
+  color: #360158;
+  border: 1px solid #360158;
+  transition: all 0.5s;
+}
 
 .page-header {
-  clear: both; }
+  clear: both;
+}
 
 h4 {
-  margin: 50px 0 20px; }
+  margin: 50px 0 20px;
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 50px; }
-  body .page-container {
-    margin: 0 40px; }
-    body .page-container .returnHome {
-      display: block;
-      margin-top: 30px;
-      clear: both;
-      color: #3a7ee9; }
-    body .page-container .newSale a.newSaleButton {
-      float: right;
-      margin: 30px 0; }
-    body .page-container h2 {
-      text-align: center;
-      background-color: #360158;
-      color: white;
-      padding: 20px;
-      margin-bottom: 50px; }
-    body .page-container .dashboard {
-      clear: both;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      margin: 100px 0; }
-      @media (max-width: 750px) {
-        body .page-container .dashboard {
-          flex-direction: column; } }
-      body .page-container .dashboard div {
-        color: white;
-        width: 20%;
-        height: 50vh;
-        box-shadow: 1px 1px 8px grey;
-        background: linear-gradient(167deg, #360158 0%, #6b119d 52%, #3a7ee9 100%);
-        border-radius: 20px;
-        position: relative;
-        text-align: center; }
-        @media (max-width: 750px) {
-          body .page-container .dashboard div {
-            width: 100%;
-            margin-bottom: 20px; } }
-        body .page-container .dashboard div h3 {
-          margin: 20px 0 40px; }
-        body .page-container .dashboard div p {
-          margin: 20px 20px; }
-        body .page-container .dashboard div i {
-          font-size: 50px;
-          color: #3a7ee9; }
-        body .page-container .dashboard div a.seeMore {
-          background-color: white;
-          width: 60%;
-          position: absolute;
-          bottom: 0;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          border-radius: 20px;
-          padding: 8px; }
-          body .page-container .dashboard div a.seeMore:hover {
-            background-color: #360158;
-            color: white;
-            transition: all 0.5s; }
-  body .report h2 {
-    text-align: center;
-    background-color: #3a7ee9;
-    color: white;
-    padding: 20px; }
-  body .report .firstReport {
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column; }
-    body .report .firstReport div {
-      display: flex;
-      flex-direction: column;
-      align-items: center; }
-  body .report .secondReport {
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column; }
-    body .report .secondReport div {
-      display: flex;
-      flex-direction: column;
-      align-items: center; }
-  body .report p {
-    color: #6b119d;
-    font-weight: bold;
-    margin: 0px; }
-  body .report .reportBox {
-    background-color: rgba(58, 126, 233, 0.2);
-    padding: 20px;
-    margin-bottom: 20px; }
-    body .report .reportBox h3 {
-      margin: 0 0 10px; }
+  margin: 0 0 50px;
+}
+body .page-container {
+  margin: 0 40px;
+}
+body .page-container .returnHome {
+  display: block;
+  margin-top: 30px;
+  clear: both;
+  color: #3a7ee9;
+}
+body .page-container .newSale a.newSaleButton {
+  float: right;
+  margin: 30px 0;
+}
+body .page-container .newSale .newSaleRedirect a.bottomBtn {
+  margin-top: 10px;
+}
+body .page-container h2 {
+  text-align: center;
+  background-color: #360158;
+  color: white;
+  padding: 20px;
+  margin-bottom: 50px;
+}
+body .page-container .dashboard {
+  clear: both;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 100px 0;
+}
+@media (max-width: 750px) {
+  body .page-container .dashboard {
+    flex-direction: column;
+  }
+}
+body .page-container .dashboard div {
+  color: white;
+  width: 20%;
+  height: 50vh;
+  box-shadow: 1px 1px 8px grey;
+  background: linear-gradient(167deg, #360158 0%, #6b119d 52%, #3a7ee9 100%);
+  border-radius: 20px;
+  position: relative;
+  text-align: center;
+}
+@media (max-width: 750px) {
+  body .page-container .dashboard div {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+body .page-container .dashboard div h3 {
+  margin: 20px 0 40px;
+}
+body .page-container .dashboard div p {
+  margin: 20px 20px;
+}
+body .page-container .dashboard div i {
+  font-size: 50px;
+  color: #3a7ee9;
+}
+body .page-container .dashboard div a.seeMore {
+  background-color: white;
+  width: 60%;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 20px;
+  padding: 8px;
+}
+body .page-container .dashboard div a.seeMore:hover {
+  background-color: #360158;
+  color: white;
+  transition: all 0.5s;
+}
+body .report h2 {
+  text-align: center;
+  background-color: #3a7ee9;
+  color: white;
+  padding: 20px;
+}
+body .report .firstReport {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+body .report .firstReport div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+body .report .secondReport {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+body .report .secondReport div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+body .report p {
+  color: #6b119d;
+  font-weight: bold;
+  margin: 0px;
+}
+body .report .reportBox {
+  background-color: rgba(58, 126, 233, 0.2);
+  padding: 20px;
+  margin-bottom: 20px;
+}
+body .report .reportBox h3 {
+  margin: 0 0 10px;
+}
 
 header .languages {
-  text-align: center; }
-  header .languages a {
-    color: #3a7ee9;
-    margin: 0 10px; }
+  text-align: center;
+}
+header .languages a {
+  color: #3a7ee9;
+  margin: 0 10px;
+}
 header .companyName h1 {
   background-color: #360158;
   margin: 0;
   padding: 20px 0;
-  color: white; }
+  color: white;
+}
 
 table {
   border-collapse: collapse;
-  width: 100%; }
-  table th {
-    background-color: #6b119d;
-    color: white;
-    padding: 20px 0; }
-  table td {
-    padding: 10px 0;
-    text-align: center; }
-  table tr:nth-child(odd) {
-    background-color: rgba(58, 126, 233, 0.2); }
+  width: 100%;
+}
+table th {
+  background-color: #6b119d;
+  color: white;
+  padding: 20px 0;
+}
+table td {
+  padding: 10px 0;
+  text-align: center;
+}
+table tr:nth-child(odd) {
+  background-color: rgba(58, 126, 233, 0.2);
+}
 
 table.indexTable {
-  max-width: 300px; }
+  max-width: 300px;
+}
 
 .newSaleModal {
   margin: 0 auto;
@@ -160,47 +206,59 @@ table.indexTable {
   flex-direction: column;
   border: 1px solid #6b119d;
   padding: 20px;
-  background-color: rgba(107, 17, 157, 0.2); }
-  .newSaleModal select {
-    margin-top: 10px; }
-  .newSaleModal a {
-    display: block; }
-  .newSaleModal select {
-    width: 100%;
-    font-size: 16px;
-    padding: 10px;
-    border: 1px solid #6b119d; }
-  .newSaleModal .deleteBtn {
-    width: 15px; }
-  .newSaleModal a.confirmBtn {
-    background-color: #3a7ee9;
-    color: white;
-    padding: 10px;
-    margin: 20px 0;
-    text-align: center; }
-  .newSaleModal a.cancelSale {
-    text-align: right;
-    font-size: 20px;
-    margin-bottom: 20px;
-    color: #6b119d;
-    padding: 8px 10px;
-    float: right; }
-    .newSaleModal a.cancelSale:hover {
-      background-color: #6b119d;
-      color: white;
-      transition: all 0.5s; }
-  .newSaleModal a.addBtn {
-    text-align: center;
-    margin: 20px; }
-  .newSaleModal ul.showNewComponent li, .newSaleModal .newSaleContainer p, .newSaleModal .messageConfirmNewSale p {
-    background-color: white;
-    padding: 10px;
-    margin: 0; }
+  background-color: rgba(107, 17, 157, 0.2);
+}
+.newSaleModal select {
+  margin-top: 10px;
+}
+.newSaleModal a {
+  display: block;
+}
+.newSaleModal select {
+  width: 100%;
+  font-size: 16px;
+  padding: 10px;
+  border: 1px solid #6b119d;
+}
+.newSaleModal .deleteBtn {
+  width: 15px;
+}
+.newSaleModal a.confirmBtn {
+  background-color: #3a7ee9;
+  color: white;
+  padding: 10px;
+  margin: 20px 0;
+  text-align: center;
+}
+.newSaleModal a.cancelSale {
+  text-align: right;
+  font-size: 20px;
+  margin-bottom: 20px;
+  color: #6b119d;
+  padding: 8px 10px;
+  float: right;
+}
+.newSaleModal a.cancelSale:hover {
+  background-color: #6b119d;
+  color: white;
+  transition: all 0.5s;
+}
+.newSaleModal a.addBtn {
+  text-align: center;
+  margin: 20px;
+}
+.newSaleModal ul.showNewComponent li, .newSaleModal .newSaleContainer p, .newSaleModal .messageConfirmNewSale p {
+  background-color: white;
+  padding: 10px;
+  margin: 0;
+}
 
 .hide {
-  display: none; }
+  display: none;
+}
 
 .show {
-  display: block; }
+  display: block;
+}
 
 /*# sourceMappingURL=styles.css.map */
