--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -28,6 +28,9 @@ img{
 a{
     color: $secondary-color;
     text-decoration: none;
+    &:hover{
+        color: $third-color;
+    }
 }
 
 .button{
@@ -67,6 +70,11 @@ body{
             a.newSaleButton{
                 float: right;
                 margin: 30px 0;
+            }
+            .newSaleRedirect{
+                a.bottomBtn{
+                    margin-top: 10px;
+                }
             }
         }
         h2{
